# NightstandLamp

./: .gitignore  Cargo.toml
src/: config.rs  device.rs  frame.rs  imgops.rs  main.rs  solid.rs  templates.rs
web/: index.html  solid-color.html  template.html
web/static/: common.js  styles.css
