[package]
name = "nightstand-lampxx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
image = "0.25.9"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
serialport = "4.8.1"
tokio = { version = "1", features = [ "full" ] }
tower-http = { version = "0.6.8", features = [ "fs", "trace", "tracing" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
